--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,17 @@
 	font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-nav{
-	width: 75%;
+.tab{
+	width: 100%;
+}
+
+.tab button{
+	border: none;
+	border-bottom: 2px solid black;
+	background-color: white;
+	margin-right: 10px;
+	height: 5vh;
+	width: 15vw;
 }
 
 ul{
