--- a/styles.css
+++ b/styles.css
@@ -6,32 +6,23 @@
 	width: 100%;
 }
 
-.tab button{
+.tablinks{
 	border: none;
-	border-bottom: 2px solid black;
 	background-color: white;
-	margin-right: 10px;
+	margin-right: 20px;
 	height: 5vh;
-	width: 15vw;
+	width: 12vw;
+	cursor: pointer;
+	transition: 0.3;
 }
 
-ul{
-	display: flex;
-	justify-content: flex-start;
-	justify-content: space-around;
-	padding-left: 0;
-}
 
-li{
-	list-style: none;
-}
-
-li a{
-	color: black;
-	text-decoration: none;
+.active{
+	border-bottom: 2px solid black;
 }
 
 .content{
+	display: none;
 	border-radius: 10px;
 	padding: 10%;
 	background-color: black;
